@@ -4,6 +4,8 @@ Changes in version 1.009
 - Rewrite the SHA-256 and SHA-512 algorithms to make them work on both
   64-bit and MSB platforms, and added the SHA-384 algorithm.
 
+- Fixed iobuf/iobuf_init.c for systems that lack anonymous mmap.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
